--- a/index.html
+++ b/index.html
@@ -9,426 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main-style.css">
 
-    <!-- <style>
-        :root {
-            --primary-red: #da291c;
-            /* Blood red color */
-            --dark-overlay: rgba(0, 0, 0, 0.75);
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-        }
-
-        /* Navbar Styling */
-        .navbar {
-            padding: 15px 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .navbar-brand {
-            font-weight: 700;
-            font-size: 1.8rem;
-            color: var(--primary-red) !important;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .nav-link {
-            color: #333;
-            font-weight: 500;
-            margin-left: 20px;
-        }
-
-        .nav-link:hover {
-            color: var(--primary-red);
-        }
-
-        /* Hero Section */
-        .hero-section {
-            background: url('img/nguy-n-hi-p-maYeMl3xCrY-unsplash.jpg') no-repeat center center/cover;
-            position: relative;
-            min-height: 85vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        /* Dark Overlay */
-        .hero-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: var(--dark-overlay);
-            z-index: 1;
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-            width: 100%;
-        }
-
-        .hero-title {
-            color: white;
-            font-weight: 700;
-            font-size: 3rem;
-            text-align: center;
-            margin-bottom: 3rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-
-        /* Search Card */
-        .search-card {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-
-        .form-select,
-        .btn-search {
-            height: 50px;
-        }
-
-        .input-group-text {
-            background-color: white;
-            border-right: none;
-            color: var(--primary-red);
-        }
-
-        .form-select {
-            border-left: none;
-        }
-
-        .form-select:focus {
-            box-shadow: none;
-            border-color: #dee2e6;
-        }
-
-        .btn-search {
-            background-color: #ff1a1a;
-            color: white;
-            border: none;
-            font-weight: 600;
-            width: 100%;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-
-        .btn-search:hover {
-            background-color: #cc0000;
-        }
-
-        /* Stats Section */
-        .stats-container {
-            position: relative;
-            z-index: 2;
-            margin-top: auto;
-            /* Push to bottom */
-            padding-bottom: 40px;
-            color: white;
-            text-align: center;
-        }
-
-        .stat-number {
-            font-size: 2rem;
-            font-weight: 700;
-            display: block;
-        }
-
-        .stat-label {
-            font-size: 0.9rem;
-            font-weight: 400;
-            opacity: 0.9;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #c91c1c;
-            color: white;
-            padding: 15px 0;
-            text-align: center;
-            font-size: 0.9rem;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            .hero-title {
-                font-size: 2rem;
-            }
-
-            .search-card {
-                margin: 0 15px;
-            }
-
-            .stat-number {
-                font-size: 1.5rem;
-            }
-
-            .stats-col {
-                margin-bottom: 20px;
-            }
-        }
-    </style> -->
-    <style>
-        /* =========================================
-   1. GLOBAL VARIABLES & RESET
-   ========================================= */
-        :root {
-            --primary-red: #da291c;
-            /* Blood red brand color */
-            --hover-red: #cc0000;
-            --dark-overlay: rgba(0, 0, 0, 0.75);
-            --font-main: 'Poppins', sans-serif;
-        }
-
-        body {
-            font-family: var(--font-main);
-            overflow-x: hidden;
-            /* Prevent horizontal scroll from animations */
-        }
-
-        /* =========================================
-   2. NAVBAR STYLING
-   ========================================= */
-        .navbar {
-            padding: 15px 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .navbar-brand {
-            font-weight: 700;
-            font-size: 1.8rem;
-            color: var(--primary-red) !important;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .nav-link {
-            color: #333;
-            font-weight: 500;
-            margin-left: 20px;
-            transition: color 0.3s ease;
-        }
-
-        .nav-link:hover {
-            color: var(--primary-red);
-        }
-
-        /* =========================================
-   3. MOBILE DRAWER (OFFCANVAS) FIX
-   ========================================= */
-        /* Mobile View (< 992px): Drawer Styling */
-        .offcanvas {
-            max-width: 80%;
-            /* Width of the side menu on mobile */
-            border-left: 4px solid var(--primary-red);
-        }
-
-        /* Desktop View (>= 992px): Reset Drawer to Normal Menu */
-        @media (min-width: 992px) {
-            .offcanvas {
-                visibility: visible !important;
-                position: static !important;
-                background: none !important;
-                border: none !important;
-                justify-content: flex-end !important;
-                width: auto !important;
-                height: auto !important;
-                transform: none !important;
-                transition: none !important;
-                display: flex !important;
-                flex-grow: 1;
-            }
-
-            .offcanvas-header {
-                display: none !important;
-                /* Hide Close Button/Logo on Desktop */
-            }
-
-            .offcanvas-body {
-                display: flex !important;
-                align-items: center;
-                justify-content: flex-end;
-                /* Push links to right */
-                padding: 0 !important;
-                overflow: visible !important;
-            }
-
-            /* Force hide the dark background overlay on desktop */
-            .offcanvas-backdrop {
-                display: none !important;
-            }
-        }
-
-        /* =========================================
-   4. HERO SECTION
-   ========================================= */
-        .hero-section {
-            /* Replace URL with your local image if needed */
-            /* background: url('https://images.unsplash.com/photo-1615461066841-6116e61058f5?q=80&w=2883&auto=format&fit=crop') no-repeat center center/cover; */
-            background: url('img/nguy-n-hi-p-maYeMl3xCrY-unsplash.jpg') no-repeat center center/cover;
-            position: relative;
-            min-height: 85vh;
-            /* Takes up 85% of the viewport height */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        /* Dark Overlay to make text readable */
-        .hero-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: var(--dark-overlay);
-            z-index: 1;
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-            width: 100%;
-            padding-top: 60px;
-            /* Space for navbar */
-        }
-
-        .hero-title {
-            color: white;
-            font-weight: 700;
-            font-size: 3rem;
-            text-align: center;
-            margin-bottom: 3rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            line-height: 1.2;
-        }
-
-        /* =========================================
-   5. SEARCH CARD
-   ========================================= */
-        .search-card {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            max-width: 1000px;
-            margin: 0 auto;
-            /* Center horizontally */
-        }
-
-        /* Make inputs and buttons tall like the design */
-        .form-select,
-        .btn-search {
-            height: 50px;
-        }
-
-        .input-group-text {
-            background-color: white;
-            border-right: none;
-            color: var(--primary-red);
-            font-size: 1.2rem;
-        }
-
-        .form-select {
-            border-left: none;
-            color: #555;
-            font-weight: 500;
-        }
-
-        .form-select:focus {
-            box-shadow: none;
-            border-color: #dee2e6;
-        }
-
-        .btn-search {
-            background-color: var(--primary-red);
-            color: white;
-            border: none;
-            font-weight: 600;
-            width: 100%;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-            font-size: 1.1rem;
-        }
-
-        .btn-search:hover {
-            background-color: var(--hover-red);
-        }
-
-        /* =========================================
-   6. STATS SECTION (BOTTOM)
-   ========================================= */
-        .stats-container {
-            position: relative;
-            z-index: 2;
-            margin-top: auto;
-            /* Pushes this section to the bottom of flex container */
-            padding-bottom: 40px;
-            color: white;
-            text-align: center;
-        }
-
-        .stat-number {
-            font-size: 2rem;
-            font-weight: 700;
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        .stat-label {
-            font-size: 0.9rem;
-            font-weight: 400;
-            opacity: 0.9;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        /* =========================================
-   7. FOOTER
-   ========================================= */
-        footer {
-            background-color: #b91c1c;
-            /* Slightly darker red */
-            color: white;
-            padding: 15px 0;
-            text-align: center;
-            font-size: 0.9rem;
-        }
-
-        /* =========================================
-   8. RESPONSIVE TWEAKS
-   ========================================= */
-        @media (max-width: 768px) {
-            .hero-title {
-                font-size: 1.8rem;
-                margin-bottom: 2rem;
-            }
-
-            .search-card {
-                margin: 0 15px;
-                /* Add side margins on mobile */
-                padding: 15px;
-            }
-
-            .stat-number {
-                font-size: 1.5rem;
-            }
-
-            .stats-col {
-                margin-bottom: 20px;
-            }
-        }
-    </style>
 
 </head>
 
@@ -563,31 +145,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-        function performSearch() {
-            const bloodGroup = document.getElementById('bloodGroup').value;
-            const hospital = document.getElementById('hospital').value;
-            const availability = document.getElementById('availability').value;
-
-            if (bloodGroup === 'Blood Group') {
-                alert('Please select a valid Blood Group.');
-                return;
-            }
-
-            console.log("Searching for:", { bloodGroup, hospital, availability });
-
-            // Simulating a search action
-            const btn = document.querySelector('.btn-search');
-            const originalText = btn.innerHTML;
-
-            btn.innerHTML = '<i class="fa-solid fa-spinner fa-spin"></i> Searching...';
-
-            setTimeout(() => {
-                alert(`Search initiated for Blood Group: ${bloodGroup}`);
-                btn.innerHTML = originalText;
-            }, 1500);
-        }
-    </script>
+<script src="main-js.js"></script>
 </body>
 
 </html>
