--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <i class="fa-solid fa-droplet fa-lg"></i>
-                Lakshan
+                BloodLink
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
