search btn hight bug fixed and improvements

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
                         <div class="col-lg-2 col-md-6">
                             <button class="btn btn-search" onclick="performSearch()">
-                                <i class="fa-solid fa-magnifying-glass me-2"></i> Search
+                                <i class="fa-solid fa-magnifying-glass me-2" ></i> Search
+                                 <!-- <i class="fa-solid fa-spinner fa-spin"></i> Searching... -->
                             </button>
                         </div>
                     </div>
